# assetops-kg

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmark/: run_baseline.py  run_hf_benchmark.py  run_ibm_scenarios.py  run_nlq.py  run_samyama.py
benchmark/handlers/: existing_handler.py  fmsr_handler.py  phm_handler.py  router.py  rule_logic_handler.py
docs/: getting-started.md  information-leakage-analysis.md  methodology.md  reproducibility-guide.md  results.md  workflow-walkthrough.md
etl/: couchdb_loader.py  eamlite_loader.py  embedding_gen.py  fmsr_loader.py  hf_loader.py  ibm_loader.py  loader.py  workorder_loader.py
evaluation/: extended_criteria.py  runner.py
mcp_server/: server.py
results/: baseline_gpt4o_results.json  hf_full_v1.json  hf_full_v2.json  hf_full_v3.json  hf_full_v4.json  hf_full_v5.json  ibm_samyama_results.json  ibm_samyama_results_v2.json  ibm_samyama_results_v3.json  ibm_samyama_results_v4.json  ibm_samyama_results_v5.json  nlq_gpt4_full_results.json  nlq_gpt4_iot.json  nlq_gpt4_v3_results.json  nlq_gpt4o_results.json  nlq_gpt4o_v2_results.json  nlq_gpt4o_v3_results.json  rust_loader_ibm_results.json  samyama_results.json  samyama_results_real_embeddings.json  samyama_results_v3.json  samyama_results_v4.json  samyama_results_v5.json
scenarios/: criticality_analysis.json  cross_asset_correlation.json  failure_similarity.json  maintenance_optimization.json  multi_hop_dependency.json  root_cause_analysis.json  temporal_pattern.json
schema/: industrial_kg.cypher
tests/: test_scenarios.py  test_schema.py
(+4 files in other folders)
